<resources>
    <string name="app_name">Sistem Pakar Bawang Merah</string>
    <string name="app_name_full">Sistem Pakar Diagnosa Penyakit Pada Tanaman Bawang Merah</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="diagnosa_penyakit">Diagnosa Penyakit</string>
    <string name="riwayat_diagnosa">Riwayat Diagnosa</string>
    <string name="daftar_penyakit">Daftar Penyakit</string>
    <string name="logout">Logout</string>
    <string name="metode_forward_chaining">Metode Forward Chaining</string>
    <string name="metode_certainty_factor">Diagnosa</string>
    <string name="data_gejala">Data Gejala</string>
    <string name="data_penyakit">Data Penyakit</string>
    <string name="data_aturan">Data Aturan</string>
    <string name="kode_gejala">Kode Gejala</string>
    <string name="nama_gejala">Nama Gejala</string>
    <string name="simpan">Simpan</string>
    <string name="nilai_cf">Nilai CF</string>
    <string name="hapus_gejala">Hapus Gejala</string>
    <string name="kode_penyakit">Kode Penyakit</string>
    <string name="nama_penyakit">Nama Penyakit</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="solusi">Solusi</string>
    <string name="gejala">Gejala</string>
    <string name="tidak_ada_gejala">Tidak ada gejala</string>
    <string name="atur_ulang_gejala">Atur Ulang Gejala</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="tidak_ada_riwayat_diagnosa">Tidak ada riwayat diagnosa</string>
    <string name="text_hasil_diagnosa_nama_penyakit">Berdasarkan gejala terpilih, kemungkinan terkena penyakit</string>
    <string name="forward_chaining">Forward Chaining</string>
    <string name="lanjut">Lanjut</string>
    <string name="tidak_tahu">Tidak tahu</string>
    <string name="sedikit_yakin">Sedikit yakin</string>
    <string name="cukup_yakin">Cukup yakin</string>
    <string name="yakin">Yakin</string>
    <string name="sangat_yakin">Sangat yakin</string>
</resources>