<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/text_pertanyaan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/gejala"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:buttonTint="@color/white"
                android:text="@string/tidak"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:buttonTint="@color/white"
                android:text="@string/tidak_tahu"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:buttonTint="@color/white"
                android:text="@string/sedikit_yakin"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:buttonTint="@color/white"
                android:text="@string/cukup_yakin"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:buttonTint="@color/white"
                android:text="@string/yakin"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rb_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:buttonTint="@color/white"
                android:text="@string/sangat_yakin"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RadioGroup>

        <Button
            android:id="@+id/btn_lanjut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/teal_700"
            android:text="@string/lanjut"
            android:textColor="@color/white"
            app:backgroundTint="@color/teal_700" />

    </LinearLayout>

</LinearLayout>